# WalletConnectRust

./: Cargo.toml
examples/: session.rs
sign_api/: Cargo.toml
sign_api/src/: pairing_uri.rs  rpc.rs
sign_api/src/crypto/: payload.rs  session.rs
sign_api/src/rpc/: params.rs
sign_api/src/rpc/params/: session_delete.rs  session_event.rs  session_extend.rs  session_ping.rs  session_propose.rs  session_request.rs  session_settle.rs  session_update.rs  shared_types.rs
