# Root Crate
[package]
name = "walletconnect_sdk"
version = "0.1.0"
edition = "2021"
authors = ["WalletConnect Team"]
license = "Apache-2.0"

[workspace]
members = [
    "relay_client",
    "relay_rpc",
    "sign_api"
]

[features]
default = ["full"]
full = ["client", "rpc", "sign_api"]
client = ["dep:relay_client"]
rpc = ["dep:relay_rpc"]
sign_api = ["dep:sign_api"]

[dependencies]
relay_client = { path = "./relay_client", optional = true }
relay_rpc = { path = "./relay_rpc", optional = true }
sign_api = { path = "./sign_api", optional = true }

[dev-dependencies]
anyhow = "1"
structopt = { version = "0.3", default-features = false }
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1.22", features = ["full"] }
url = "2.3"
warp = { version = "0.3", default-features = false }
serde_json = "1.0"
hex = "0.4"
dashmap = "5.5"

[[example]]
name = "session"
required-features = ["client","rpc"]

[[example]]
name = "websocket_client"
required-features = ["client","rpc"]

[[example]]
name = "http_client"
required-features = ["client","rpc"]

[[example]]
name = "webhook"
required-features = ["client","rpc"]
